# Research_WIKI

./: .gitignore  .mcp.json  AGENTS.md  PRD.md  README.md  TASK.md  journal.md  mcp-settings.json  pyproject.toml
docs/: client-setup.md
harness/: contract.md  preference.md  procedure.md  validation.md
specs/: acceptance.md  brief.md  clarifications.md  decisions.md  discussion-rounds.md  plan-closed.md  requirements.md
src/research_wiki_mcp/: __init__.py  config.py  git.py  gui.py  index.py  markdown.py  mcp_catalog.py  models.py  pdf.py  repository.py  server.py  service.py
tests/: test_config.py  test_e2e_workflow.py  test_gui.py  test_index.py  test_mcp_catalog.py  test_mcp_http.py  test_mcp_stdio.py  test_pdf.py  test_repository.py  test_service.py
wiki/: index.md  log.md
wiki/concepts/: anisotropy-regularized-gaussian-reconstruction.md  attention-map-object-discovery.md  deformation-gradient-gaussian-kinematics.md  descriptor-matching.md  geometric-verification-for-object-discovery.md  instance-discrimination.md  joint-embedding-prediction.md  log-sum-exp.md  momentum-target-encoders.md  multi-crop-local-to-global-training.md  opacity-field-internal-filling.md  self-distillation-without-labels.md  self-supervised-pretext-tasks.md  shortcut-avoidance-in-self-supervision.md  spatial-context-and-part-reasoning.md  transformation-invariance-and-equivariance.md  what-you-see-is-what-you-simulate.md
wiki/questions/: gradient-guided-patch-construction.md
wiki/sources/: context-prediction.md  ddpm-denoising-diffusion-probabilistic-models.md  exemplar-cnn.md  (+6 more)
(+2 files in other folders)
